--- a/static/app.css
+++ b/static/app.css
@@ -1,5 +1,8 @@
 body{
   background-color: black;
+}
+
+*{
   font-family: Arial, Helvetica, sans-serif;
   color:white;
 }
@@ -11,7 +14,6 @@ main{
 textarea{
   resize: none;
   outline: none;
-  display:none;
 }
 
 textarea:focus{
@@ -63,6 +65,10 @@ textarea:focus{
   align-items: center;
   height: 100%;
 */
+
+.hidden{
+  display: none;
+}
 
 .inactive{
   background-color: purple;
